Modify backend to Prisma optimizate
