# server/src/domain/orm/auth.orm.ts
@@ -1,11 +1,19 @@
-import { RowDataPacket, ResultSetHeader } from "mysql2";
+import { PrismaClient } from "@prisma/client";
+import { IRegister, TLogin } from "../../types/auth.types";
 
-import { IUser, TLogin } from "../../types/auth.types";
+const prisma = new PrismaClient();
 
-
-export const registerUserORM = async (user: IUser) => {
+export const registerUserORM = async (user: IRegister) => {
   try {
-    const newUser = await user.create(user);
+    const newUser = await prisma.user.create({
+      data: {
+        name: user.name,
+        email: user.email,
+        password: user.password,
+        address: user.address || null,
+        phone: user.phone || null,
+      },
+    });
     return newUser;
   } catch (error) {
     throw new Error("Error in ORM " + error);
@@ -14,16 +22,18 @@ export const registerUserORM = async (user: IUser) => {
 
 export const loginUserORM = async (user: TLogin) => {
   try {
-    const foundUser = await user.findOne({
+    const foundUser = await prisma.user.findUnique({
       where: {
         email: user.email,
-        password: user.password,
       },
     });
+
+    if (!foundUser || foundUser.password !== user.password) {
+      return null; 
+    }
+
     return foundUser;
   } catch (error) {
     throw new Error("Error en ORM " + error);
   }
 };
-
-
