# server/src/routes/index.ts
@@ -1,36 +1,37 @@
 import express, { Request, Response } from "express";
 import authRouter from "./authRouter";
-import { getAllUsersController } from "../controllers/users/UsersController";
+import { UsersController } from "../controllers/users/UsersController";
+
 
 
 const server = express();
 
 const rootRouter = express.Router();
 
-const controller: getAllUsersController = new getAllUsersController();
+const controller: UsersController = new UsersController();
 
 server.use("/", rootRouter);// http://localhost:8080/api/
 
 
 
 server.route("/")
-    .get(async (req: Request, res: Response): Promise<void> => {
-        try {
-            const response = await controller.getAllUsers();
-
-            res.status(200).json({
-                status: 200,
-                message: "Usuarios obtenidos exitosamente",
-                data: response
-            });
+.get(async(req: Request, res: Response): Promise<any> =>{
+    try {
+        const response = await controller.getAllUsers()
+        
+        if (response && response.status) {
+            return res.status(response.status).json(response);
+          }
+    
+          res.status(500).json({
+            message: "Error al buscar usuarios",
+            Error,
+          });
         } catch (error) {
-            console.error("Error in Router: ", error);
-            res.status(500).json({
-                status: 500,
-                message: "Error interno del servidor"
-            });
+          console.log("Error in Router" + error);
         }
-    });
+})
+
 
 
 
