# server/src/types/auth.types.ts
@@ -7,4 +7,7 @@ export type IProduct = Product;
 export type IOrder = Order;
 export type IOrderDetail = OrderDetail;
 
+
+
+export type IRegister = Omit<User, "role" | "createdAt" | "id" >;
 export type TLogin = Pick<User, "email" | "password">;
